# Eurelis-Langchain-SolR-VectorStore

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
etc/docker/: docker-compose.yml
etc/docker/data/solr/langchain/conf/: managed-schema.xml
etc/docker/langchain/: core.properties  managed-schema.xml
etc/docker/langchain/conf/: managed-schema.xml
eurelis_langchain_solr_vectorstore/: __init__.py  solr_core.py
src/: requirements.txt
src/eurelis_langchain_solr_vectorstore/: __init__.py  solr_core.py
