[build-system]
requires = ["setuptools>=61.0", ""]
build-backend = "setuptools.build_meta"


[project]
name = "eurelis_langchain_solr_vectorstore"
version = "0.0.1"
authors = [
  { name="Jérôme DIAZ", email="j.diaz@eurelis.com" },
]
description = "Library to provide a Solr based vector store for langchain"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Eurelis/Eurelis-Langchain-SolR-VectorStore"
"Bug Tracker" = "https://github.com/Eurelis/Eurelis-Langchain-SolR-VectorStore/issues"

